--- a/app/views/factory/productions/_base/_component.html.erb
+++ b/app/views/factory/productions/_base/_component.html.erb
@@ -3,7 +3,7 @@
     <span><%= component.name %></span>
     <span class="size-7"><%= component.select_str %></span>
   </strong>
-  <div data-controller="custom" data-custom-only-value="<%= component.only_one? %>" class="buttons are-small no-disabled pt-4">
+  <div class="buttons are-small no-disabled pt-4">
   <% if component.multiple %>
     <%= render partial: 'component_part_number', collection: component_parts, as: :component_part, locals: { component: component } %>
   <% else %>
