--- a/app/views/admin/_factory_admin.html.erb
+++ b/app/views/admin/_factory_admin.html.erb
@@ -1,6 +1,6 @@
 <div class="media">
   <figure class="media-left">
-    <%# image_tag meta[0].logo, class: 'image is-64x64' if meta[0].logo.present? %>
+    <%= image_tag 'factory_log.png', class: 'image is-64x64' %>
   </figure>
   <div class="media-content">
     <div class="content">
