--- a/app/views/factory/productions/_base/_component_part.html.erb
+++ b/app/views/factory/productions/_base/_component_part.html.erb
@@ -6,11 +6,11 @@
   <% if component.cancelable?(@production.part_ids, component_part.part_id) %>
     <i class="fa-solid fa-xmark ml-1"></i>
   <% end %>
-  <%= hidden_field_tag 'production_parts_attributes[][component_id]', component_part.component_id, form: 'edit_custom', id: nil %>
+  <%= hidden_field_tag "production_parts_attributes[#{component.id}][component_id]", component_part.component_id, form: 'edit_custom', id: nil %>
   <% if component.only_one? %>
-    <%= radio_button_tag 'production_parts_attributes[][part_id]', component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check display-none', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
+    <%= radio_button_tag "production_parts_attributes[#{component.id}][part_id]", component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check display-none', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
   <% else %>
-    <%= hidden_field_tag 'production_parts_attributes[][part_id]', component_part.part_id, form: 'edit_custom', data: { part_taxon_id: component_part.part.taxon_id }, id: nil if @production.part_ids.include?(component_part.part_id) && component.disabled?(@production.part_ids, component_part.part_id) %>
-    <%= check_box_tag 'production_parts_attributes[][part_id]', component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check display-none', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
+    <%= hidden_field_tag "production_parts_attributes[#{component.id}][part_id]", component_part.part_id, form: 'edit_custom', data: { part_taxon_id: component_part.part.taxon_id }, id: nil if @production.part_ids.include?(component_part.part_id) && component.disabled?(@production.part_ids, component_part.part_id) %>
+    <%= check_box_tag "production_parts_attributes[#{component.id}][part_id]", component_part.part_id, @production.part_ids.include?(component_part.part_id), disabled: component.disabled?(@production.part_ids, component_part.part_id), data: { action: 'custom#toggle', part_taxon_id: component.part_taxon_id }, class: 'weui-check display-none', id: "part_#{component_part.part_id}", form: 'edit_custom' %>
   <% end %>
 </label>
