--- a/app/views/factory/admin/productions/_part/_form.html.erb
+++ b/app/views/factory/admin/productions/_part/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with theme: 'inline', model: @production, url: { action: 'update' }, class: 'modal-card' do |f| %>
+<%= form_with theme: 'inline', model: @production, url: { action: 'update_part' }, class: 'modal-card' do |f| %>
   <%= render 'modal_header' %>
   <section class="modal-card-body">
     <%= render 'error_messages', target: f.object %>
