--- a/app/views/factory/admin/productions/_form.html.erb
+++ b/app/views/factory/admin/productions/_form.html.erb
@@ -9,6 +9,8 @@
     </div>
   </div>
 </div>
-<%= f.number_field :price %>
+<%= f.number_field :cost_price, step: 0.01, data: { total_target: 'reduce', action: 'total#updateReduce' } %>
+<%= f.number_field :profit_price, step: 0.01, data: { total_target: 'profit', action: 'total#updateProfit' } %>
+<%= f.number_field :price, data: { total_target: 'total', action: 'total#updateTotal' } %>
 <%= f.text_field :link %>
 <%= f.number_field :step %>
