--- a/app/views/factory/admin/productions/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_thead.html.erb
@@ -2,7 +2,7 @@
   <p><%= Factory::Production.human_attribute_name(:name) %></p>
   <p><%= Factory::Production.human_attribute_name(:title) %></p>
 </th>
-<th>
+<th class="text-right">
   <p><%= Factory::Production.human_attribute_name(:cost_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
   <p><%= Factory::Production.human_attribute_name(:price) %></p>
