--- a/app/views/factory/admin/productions/update_part.turbo_stream.erb
+++ b/app/views/factory/admin/productions/update_part.turbo_stream.erb
@@ -1,2 +1,1 @@
-<%= turbo_stream.replace "tr_#{params[:id]}", partial: 'index_tbody', layout: 'index_tr', locals: { model: @production } %>
-<%= turbo_stream.remove 'modal' %>
+<%= render partial: 'update', locals: { model: @production } %>
