--- a/app/views/factory/admin/productions/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_thead.html.erb
@@ -8,6 +8,7 @@
   <p><%= Factory::Production.human_attribute_name(:price) %></p>
 </th>
 <th><%= Factory::Production.human_attribute_name(:card_price) %></th>
+<th><%= Factory::Production.human_attribute_name(:wallet_price) %></th>
 <th>
   <p><%= Factory::Production.human_attribute_name(:default) %></p>
   <p><%= Factory::Production.human_attribute_name(:presell) %></p>
