--- a/app/views/factory/admin/productions/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tr.html.erb
@@ -6,7 +6,7 @@
         <i class="fa-solid fa-circle-info text-info"></i>
       <% end %>
       <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-solid fa-pencil text-info"></i>
+        <i class="fa-solid fa-pencil text-link"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy.title') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
         <i class="fa-solid fa-trash text-danger"></i>
@@ -16,6 +16,10 @@
       <%= link_to({ controller: 'production_spaces', production_id: model.id }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-info"></i>
         <span class="ml-1"><%= t('.production_spaces.index.title') %></span>
+      <% end %>
+      <%= button_to({ action: 'wallet', id: model.id }, class: 'button is-small is-light') do %>
+        <i class="fa-solid fa-pencil text-link"></i>
+        <span class="ml-1"><%= t('.wallet.title') %></span>
       <% end %>
     </div>
   </td>
