--- a/app/views/factory/admin/productions/_part/_part_tbody.html.erb
+++ b/app/views/factory/admin/productions/_part/_part_tbody.html.erb
@@ -1,6 +1,6 @@
 <%= f.fields :production_parts, model: @production.production_parts.find_or_initialize_by(part_id: part.id) do |ef| %>
-  <td><%= ef.check_box '_destroy', { checked: ef.object.persisted?, include_hidden: true, data: { action: 'show#toggle' } }, '0', '1' %></td>
   <td><%= ef.object.part.name %></td>
+  <td><%= ef.object.part.price.to_money.format.html_safe %></td>
   <td>
   <% if ef.object.persisted? %>
     <div data-show-target="check">
@@ -26,4 +26,5 @@
     ><%= ef.object.number %></div>
   <% end %>
   </td>
+  <td><%= ef.check_box '_destroy', { checked: ef.object.persisted?, include_hidden: true, data: { action: 'show#toggle' } }, '0', '1' %></td>
 <% end %>
