--- a/app/views/factory/admin/taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxons/_base/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <td><i class="fa-solid fa-fw fa-bars text-grey is-drawable"></i></td>
 <td>
-  <%= link_to({ action: 'show', id: model.id }, class: 'is-several') do %>
+  <%= link_to({ controller: 'taxon/products', taxon_id: model.id }, class: 'is-several') do %>
     <%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %>
     <span><%= model.name %></span>
   <% end %>
