--- a/app/views/factory/admin/productions/_edit_modal_form.html.erb
+++ b/app/views/factory/admin/productions/_edit_modal_form.html.erb
@@ -13,8 +13,9 @@
         </div>
       </div>
     </div>
-    <%= f.number_field :cost_price, step: 0.01, disabled: f.object.str_part_ids.present? %>
-    <%= f.number_field :profit_price, step: 0.01, data: { total_target: 'reduce', action: 'total#updateReduce' } %>
+
+    <%= f.number_field :cost_price, step: 0.01, data: { total_target: 'reduce', action: 'total#updateReduce' }, disabled: f.object.str_part_ids.present? %>
+    <%= f.number_field :profit_price, step: 0.01, data: { total_target: 'profit', action: 'total#updateProfit' } %>
     <%= f.number_field :price, data: { total_target: 'total', action: 'total#updateTotal' } %>
     <%= f.text_field :link %>
     <%= f.number_field :step %>
