--- a/app/views/factory/admin/scenes/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/scenes/_base/_index_thead.html.erb
@@ -13,5 +13,5 @@
   <p><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></p>
   <p><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></p>
 </th>
-<td><%= Factory::Scene.human_attribute_name(:specialty) %></td>
-<td><%= Factory::Scene.human_attribute_name(:automatic) %>(提前天数)</td>
+<th><%= Factory::Scene.human_attribute_name(:specialty) %></th>
+<th><%= Factory::Scene.human_attribute_name(:automatic) %>(提前天数)</th>
