--- a/app/views/factory/admin/production_items/_index/_button.html.erb
+++ b/app/views/factory/admin/production_items/_index/_button.html.erb
@@ -1,12 +1,10 @@
-<div class="buttons are-small mb-0">
-  <%= form_with theme: nil, model: @production_item, url: { action: 'create' } do |f| %>
-    <%= f.hidden_field :qr_code %>
-    <%= f.submit '新增', class: 'button is-info' %>
-  <% end %>
-  <%= form_with theme: nil, scope: '', model: @production_item, url: { action: 'batch' }, class: 'ml-2' do |f| %>
-    <%= f.submit '批量新增', class: 'button is-info' %>
-  <% end %>
-  <%= button_to({ action: 'new' }, class: 'button is-primary') do %>
-    <span><%= t('.new.title') %></span>
-  <% end %>
-</div>
+<%= form_with theme: nil, model: @production_item, url: { action: 'create' } do |f| %>
+  <%= f.hidden_field :qr_code %>
+  <%= f.submit '新增', class: 'button is-info' %>
+<% end %>
+<%= form_with theme: nil, scope: '', model: @production_item, url: { action: 'batch' } do |f| %>
+  <%= f.submit '批量新增', class: 'button is-info' %>
+<% end %>
+<%= button_to({ action: 'new' }, class: 'button is-primary') do %>
+  <span><%= t('.new.title') %></span>
+<% end %>
