--- a/app/views/factory/admin/produce_plans/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_base/_index_thead.html.erb
@@ -3,6 +3,6 @@
   <p class="text-grey"><%= Factory::ProducePlan.human_attribute_name(:book_start_at) %></p>
   <p><%= Factory::ProducePlan.human_attribute_name(:book_finish_at) %></p>
 </th>
-<td><%= Factory::ProducePlan.human_attribute_name(:created_at) %></td>
+<th><%= Factory::ProducePlan.human_attribute_name(:created_at) %></th>
 <th><%= Factory::ProducePlan.human_attribute_name(:state) %></th>
 <th><%= Factory::ProducePlan.human_attribute_name(:production_plans_count) %></th>
