--- a/app/views/factory/admin/production_items/batch_new.turbo_stream.erb
+++ b/app/views/factory/admin/production_items/batch_new.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.append 'body', partial: 'batch_new_form', layout: 'modal' %>
+<%= turbo_stream.append 'body', partial: 'batch_new_form', layout: 'modal_form' %>
