--- a/app/views/agent/_production_cart.html.erb
+++ b/app/views/agent/_production_cart.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 <% else %>
   <% if cart %>
-    <%= render partial: 'cart_big', locals: { item: cart.init_cart_item(params, good_id: model.id), cart: cart, item_con: item_con } %>
+    <%= render partial: 'cart_item_big', locals: { item: cart.init_cart_item(params, good_id: model.id), cart: cart, item_con: item_con } %>
   <% end %>
 <% end %>
 </div>
