--- a/app/views/application/_modal_foot_component.html.erb
+++ b/app/views/application/_modal_foot_component.html.erb
@@ -14,7 +14,7 @@
         <% end %>
       </ul>
     </div>
-    <%= render partial: 'cart_add', locals: { item: @cart.init_cart_item(params, good_id: @production.id), cart: @cart, item_con: item_con } %>
+    <%= render partial: 'cart_item_add', locals: { item: @cart.init_cart_item(params, good_id: @production.id), cart: @cart, item_con: item_con } %>
   </div>
   <div class="flex justify-content-center align-items-center is-fullwidth mt-2">
     <button data-action="click->modal#close" class="button is-small is-rounded is-primary">确认</button>
