--- a/app/views/factory/in/productions/_base/_index_tbody.html.erb
+++ b/app/views/factory/in/productions/_base/_index_tbody.html.erb
@@ -17,7 +17,7 @@
 </td>
 <td><%= model.price.to_money.format.html_safe %></td>
 <td class="text-centered">
-  <%= render partial: 'cart', locals: { item_con: 'trade/in/items', item: @cart.init_cart_item(params, good_id: model.id), cart: @cart } %>
+  <%= render partial: 'cart_item', locals: { item: @cart.init_cart_item(params, good_id: model.id), cart: @cart, item_con: 'trade/in/items' } %>
 </td>
 <td>
   <%= button_to({ controller: 'admin/productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('factory.admin.productions.show.title') }, class: 'button is-small is-rounded is-light') do %>
