--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="flex mt-1">
       <% if @cart %>
-        <%= render partial: 'cart', locals: { item: @cart.init_cart_item(params, good_id: @production.id), item_con: 'trade/my/items', cart: @cart } %>
+        <%= render partial: 'cart_item', locals: { item: @cart.init_cart_item(params, good_id: @production.id), cart: @cart, item_con: 'trade/my/items' } %>
       <% end %>
       <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, class: 'button is-small is-primary is-radius') do %>
         <span class="pr-1"><%= t('trade.my.carts.show.title') %></span>
