--- a/app/views/application/_product_summary.html.erb
+++ b/app/views/application/_product_summary.html.erb
@@ -14,7 +14,7 @@
       </ul>
     </dt>
     <dd class="text-right">
-      <%= render partial: 'cart_new', locals: { item: @cart.init_cart_item(params, good_id: item.good_id), item_con: item_con, cart: @cart } %>
+      <%= render partial: 'cart_item_new', locals: { item: @cart.init_cart_item(params, good_id: item.good_id), cart: @cart, item_con: item_con } %>
     </dd>
   </div>
 <% end %>
