--- a/app/views/factory/productions/_show/_tab_bar.html.erb
+++ b/app/views/factory/productions/_show/_tab_bar.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="level-right p-3">
   <% if @cart %>
-    <%= render partial: 'cart_new', locals: { model: @production, item_con: 'trade/my/items', item: @cart.init_cart_item(params, good_id: @production.id), cart: @cart } %>
+    <%= render partial: 'cart_item_new', locals: { item: @cart.init_cart_item(params, good_id: @production.id), cart: @cart, item_con: 'trade/my/items' } %>
   <% end %>
   </div>
 </div>
