--- a/app/views/factory/admin/purchase_items/_index/_button_actions.html.erb
+++ b/app/views/factory/admin/purchase_items/_index/_button_actions.html.erb
@@ -2,6 +2,6 @@
   <%= f.hidden_field :ids, data: { form_target: 'ids' } %>
   <%= button_tag data: { form_target: 'submit' }, disabled: true, class: 'button is-success' do %>
     <i class="fa-solid fa-cash-register"></i>
-    <span class="pl-1"><%= t('.batch_receive.title') %></span>
+    <span class="ml-1"><%= t('.batch_receive.title') %></span>
   <% end %>
 <% end %>
