--- a/app/views/factory/admin/taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/taxons/_base/_index_tbody.html.erb
@@ -7,7 +7,7 @@
   <p class="text-grey"><%= model.scene&.title %></p>
 </td>
 <td><%= link_to model.products_count, { controller: 'taxon/products', taxon_id: model.id } %></td>
-<td><%= @count_hash[model.id] %></td>
+<td><%= @count_hash[model.id] if @count_hash %></td>
 <td>
   <%= link_to({ controller: 'taxon/provides', taxon_id: model.id }, aria: { label: t('.taxon.provides.index.title') }) do %>
     <span><%= model.provides_count %></span>
