--- a/app/views/factory/panel/factory_taxons/_form.html.erb
+++ b/app/views/factory/panel/factory_taxons/_form.html.erb
@@ -1,3 +1,3 @@
 <%= f.text_field :name, autofocus: true %>
 <%= f.file_field :logo %>
-<%= f.collection_select :scene_id, @scenes, :id, :title %>
+<%= f.collection_select :scene_id, @scenes, :id, :title, include_blank: true %>
