--- a/app/views/factory/admin/taxon/productions/index.html.erb
+++ b/app/views/factory/admin/taxon/productions/index.html.erb
@@ -1,4 +1,5 @@
 <%= render 'taxon_bar' %>
+<%= render 'index_actions' %>
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @productions, as: :model, cached: ->(production){ [production, current_member.cache] } %>
