--- a/app/views/factory/admin/provides/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/provides/_base/_index_tr.html.erb
@@ -2,15 +2,21 @@
   <%= yield %>
   <td>
     <div data-show-target="item" class="visibility-hidden">
-      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
-        <i class="fa-solid fa-trash text-danger"></i>
-        <span class="pl-1"><%= t('.destroy.title') %></span>
-      <% end %>
       <%= button_to({ action: 'show', id: model.id }, aria: { label: t('.show.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info text-info"></i>
       <% end %>
       <%= button_to({ action: 'edit', id: model.id }, aria: { label: t('.edit.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-pencil text-link"></i>
+      <% end %>
+    </div>
+    <div data-show-target="item" class="visibility-hidden">
+      <%= button_to({ action: 'invite', id: model.id }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-solid fa-user-plus text-primary"></i>
+        <span class="ml-1"><%= t('.invite.title') %></span>
+      <% end %>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.destroy.confirm') } }) do %>
+        <i class="fa-solid fa-trash text-danger"></i>
+        <span class="ml-1"><%= t('.destroy.title') %></span>
       <% end %>
     </div>
   </td>
