--- a/app/views/factory/admin/productions/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_base/_index_tr.html.erb
@@ -21,6 +21,10 @@
         <i class="fa-solid fa-pencil text-link"></i>
         <span class="ml-1"><%= t('.wallet.title') %></span>
       <% end %>
+      <%= button_to({ action: 'edit_stock', id: model.id }, class: 'button is-small is-light') do %>
+        <i class="fa-solid fa-pencil text-primary"></i>
+        <span class="ml-1"><%= t('.edit_stock.title') %></span>
+      <% end %>
     </div>
   </td>
 </tr>
