simple productions count

--- a/app/views/factory/admin/products/_buy/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tr.html.erb
@@ -1,4 +1,6 @@
+<% if model.productions_count > 1 %>
 <tr id="tr_<%= model.id %>" class="background-light">
   <%= yield %>
 </tr>
+<% end %>
 <%= render partial: 'production', layout: 'production_tr', collection: model.productions, as: :model %>
