--- a/app/views/factory/in/items/edit_assign.turbo_stream.erb
+++ b/app/views/factory/in/items/edit_assign.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.append 'body', partial: 'assign_form', layout: 'modal', locals: { model: @item } %>
+<%= turbo_stream.append 'body', partial: 'assign_form', layout: 'modal_form', locals: { model: @item } %>
