--- a/app/views/factory/admin/production_provides/_index/_button.html.erb
+++ b/app/views/factory/admin/production_provides/_index/_button.html.erb
@@ -1,6 +1,6 @@
-<% @providers.each do |provider| %>
-  <%= button_to({ action: 'new', organ_id: provider.id, **request.query_parameters.except(:id) }, class: 'button is-link') do %>
+<% @provides.each do |provide| %>
+  <%= button_to({ action: 'new', provide_id: provide.id, **request.query_parameters.except(:id) }, class: 'button is-link') do %>
     <i class="fa-solid fa-plus"></i>
-    <span class="ml-1"><%= provider.name %></span>
+    <span class="ml-1"><%= provide.name %></span>
   <% end %>
 <% end %>
