--- a/app/views/factory/admin/production_provides/_index/_button.html.erb
+++ b/app/views/factory/admin/production_provides/_index/_button.html.erb
@@ -1,5 +1,5 @@
 <% @provides.each do |provide| %>
-  <%= button_to({ action: 'new', provide_id: provide.id, **request.query_parameters.except(:id) }, class: 'button is-link') do %>
+  <%= button_to({ action: 'new', **request.GET.except(:id) }, params: { production_provide: { provide_id: provide.id } }, class: 'button is-link') do %>
     <i class="fa-solid fa-plus"></i>
     <span class="ml-1"><%= provide.name %></span>
   <% end %>
