--- a/app/views/factory/admin/production_provides/index.html.erb
+++ b/app/views/factory/admin/production_provides/index.html.erb
@@ -4,6 +4,5 @@
 
 <%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @production_provides, as: :model %>
+  <%= render partial: 'provide_tbody', layout: 'provide_tr', collection: @provides, as: :model %>
 <% end %>
-
-<%= paginate @production_provides %>
