--- a/app/views/factory/admin/production_provides/create.turbo_stream.erb
+++ b/app/views/factory/admin/production_provides/create.turbo_stream.erb
@@ -1,1 +1,2 @@
-<%= turbo_stream.replace "tr_#{@production_provide.provide_id}", partial: 'index_tbody', layout: 'index_tr', locals: { model: model } %>
+<%= turbo_stream.append "tbody", partial: 'index_tbody', layout: 'index_tr', locals: { model: model } %>
+<%= turbo_stream.remove "tr_#{@production_provide.provide_id}" %>
