--- a/app/views/factory/admin/production_provides/_edit_modal_form.html.erb
+++ b/app/views/factory/admin/production_provides/_edit_modal_form.html.erb
@@ -1,5 +1,8 @@
-<%= form_with model: @part_provider, url: { action: 'create' } do |f| %>
-  <%= render 'error_messages', target: f.object  %>
-  <%= render partial: 'production_search', locals: { f: f } %>
+<%= form_with theme: 'modal', model: @production_provide, url: { action: 'update' } do |f| %>
+  <%= render 'modal_header' %>
+  <section class="modal-card-body">
+    <%= render 'error_messages', target: f.object %>
+    <%= f.number_field :cost_price %>
+  </section>
   <%= f.submit %>
 <% end %>
