--- a/app/views/factory/admin/production_provides/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_provides/_base/_index_tbody.html.erb
@@ -2,7 +2,7 @@
 <td>
   <p><%# model.upstream_production.name %></p>
 </td>
-<td><%# model.cost_price %></td>
+<td><%= model.cost_price %></td>
 <td>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :verified, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
