--- a/app/views/factory/admin/base/_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_taxon_bar.html.erb
@@ -5,7 +5,10 @@
 <div class="tabs is-centered mb-3">
   <ul>
     <li class="<%= active_helper(taxons: ['show', 'edit'], active: 'is-active') %>">
-      <%= link_to t('.taxons.show.title'), { controller: 'taxons', action: 'show', id: @taxon.id } %>
+      <%= link_to({ controller: 'taxons', action: 'show', id: @taxon.id }) do %>
+        <i class="fa-solid fa-circle-info"></i>
+        <span class="ml-1"><%= t('.taxons.show.title') %></span>
+      <% end %>
     </li>
     <li class="<%= active_helper(controllers: 'taxon_components', active: 'is-active') %>">
       <%= link_to({ controller: 'taxon_components', taxon_id: @taxon.id }) do %>
