--- a/app/views/factory/admin/products/_buy/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_buy/_index_tbody.html.erb
@@ -1,11 +1,6 @@
-<td>
+<td colspan="4">
   <div class="is-several">
     <%= image_tag model.logo.variant(resize_to_limit: [32, 32]), class: 'image is-32x32' if model.logo.attached? %>
     <span><%= model.name %></span>
   </div>
 </td>
-<td></td>
-<td>
-  <p><%= model.brand&.name %></p>
-</td>
-<td><%= model.description.to_s.truncate(27) %></td>
