--- a/app/views/factory/admin/base/_taxon_bar.html.erb
+++ b/app/views/factory/admin/base/_taxon_bar.html.erb
@@ -10,12 +10,6 @@
         <span class="ml-1"><%= t('.taxons.show.title') %></span>
       <% end %>
     </li>
-    <li class="<%= active_helper(controllers: 'taxon_components', active: 'is-active') %>">
-      <%= link_to({ controller: 'taxon_components', taxon_id: @taxon.id }) do %>
-        <i class="fa-solid fa-cogs"></i>
-        <span class="ml-1"><%= t('.taxon_components.index.title') %></span>
-      <% end %>
-    </li>
     <li class="<%= active_helper(products: ['index'], active: 'is-active') %>">
       <%= link_to({ controller: 'taxon/products', taxon_id: @taxon.id }) do %>
         <span><%= t('factory.admin.taxon.products.index.title') %></span>
@@ -26,6 +20,12 @@
       <%= link_to({ controller: 'taxon/productions', action: 'index', taxon_id: @taxon.id }) do %>
         <i class="fa-solid fa-eye"></i>
         <span class="ml-1"><%= t('factory.admin.taxon.productions.index.title') %></span>
+      <% end %>
+    </li>
+    <li class="<%= active_helper(controllers: 'taxon_components', active: 'is-active') %>">
+      <%= link_to({ controller: 'taxon_components', taxon_id: @taxon.id }) do %>
+        <i class="fa-solid fa-cubes"></i>
+        <span class="ml-1"><%= t('.taxon_components.index.title') %></span>
       <% end %>
     </li>
     <li class="<%= active_helper(products: ['buy'], active: 'is-active') %>">
