--- a/app/views/factory/admin/production_provides/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/production_provides/_base/_index_thead.html.erb
@@ -1,4 +1,4 @@
-<th><%= Factory::ProductionProvide.human_attribute_name(:provider_id) %></th>
+<th><%= Factory::ProductionProvide.human_attribute_name(:provide_id) %></th>
 <th>
   <p><%= Factory::ProductionProvide.human_attribute_name(:upstream_production_id) %></p>
   <p><%= Factory::ProductionProvide.human_attribute_name(:upstream_product_id) %></p>
