--- a/app/views/factory/productions/index.html.erb
+++ b/app/views/factory/productions/index.html.erb
@@ -7,5 +7,5 @@
   <%= paginate @productions %>
 </div>
 <div class="column is-one-fifth">
-  <%= render partial: 'cart_nav', locals: { cart_con: 'trade/my/carts', cart: @cart } if @cart %>
+  <%= render partial: 'cart_nav', locals: { cart: @cart, cart_con: 'trade/my/carts', order_con: 'trade/my/orders' } if @cart %>
 </div>
