--- a/app/views/factory/admin/provides/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/provides/_base/_index_tbody.html.erb
@@ -5,6 +5,11 @@
     <%= image_tag model.provider.logo, class: 'image is-24x24' if model.provider.logo.attached? %>
     <span><%= model.provider.name %></span>
   </div>
+<% else %>
+  <%= button_to({ action: 'invite', id: model.id }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fa-solid fa-user-plus text-primary"></i>
+    <span class="ml-1"><%= t('.invite.title') %></span>
+  <% end %>
 <% end %>
 </td>
 <td><time data-controller="time"><%= model.created_at.to_fs(:iso8601) %></time></td>
